Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17269

Cannot assign a negative value to a qlonglong with cdb

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.11.0-beta2
    • Qt Creator 4.2.0-beta1
    • Debugger
    • msvc2013 32bit, windows 10
    • 6e3de85b337eb8a6a107abcef932ee21deabc3d5 (qt-creator/qt-creator/4.11)

      Run the "simple" through cdb and break on the return statement in testEndlessLoop(). There is a variable called "a" on the stack. Try to assign -10 to it from the locals and expressions view. The view will be updated and show "2", rather than "-10".

      debugger log left:

      l+t
      l+s
      bu102500 `simple_test_app!D:\qtcreator-super-4.1\qtcreator\tests\manual\debugger\simple\simple_test_app.cpp:2371`
      !qtcreatorcdbext.breakpoints -v
      sxn 0x4000001f
      sxn ibp
      .asm source_line
      !qtcreatorcdbext.setparameter maxStringLength=10000 maxStackDepth=20
      !qtcreatorcdbext.script  print(sys.version)
      !qtcreatorcdbext.pid
      g
      !qtcreatorcdbext.locals -D -e watch,local,inspect,return -v -c -a -W 0
      <Rebuild Watchmodel 346 @ 13:32:25.064 [151400ms] >
      !qtcreatorcdbext.assign -u local.a=2d0031003000
      !qtcreatorcdbext.locals -D -e watch,local,inspect,return -v -c -a -W 0
      <Rebuild Watchmodel 347 @ 13:32:30.781 [5717ms] >
      

      right:

      sStarting debugger "CdbEngine" for ABI "x86-windows-msvc2013-pe-32bit"...
      dStart parameters: 'simple_test_app' mode: 1
      dABI: x86-windows-msvc2013-pe-32bit
      dLanguages: c++ 
      dExecutable: D:\build-simple-5_7_msvc2013_32bit-Debug\debug\simple_test_app.exe 
      dDirectory: D:\build-simple-5_7_msvc2013_32bit-Debug
      dDebugger: C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\cdb.exe
      dProject: D:\qtcreator-super-4.1\qtcreator\tests\manual\debugger\simpleAddtional Search Directories:
      dRemote: :0
      dSysroot: 
      dDebug Source Location: 
      dDebugger settings: 
      dShowThreadNames: false  (default: false)
      dUseToolTipsInBreakpointsView: true  (default: false)  ***
      dUseToolTipsInLocalsView: false  (default: false)
      dUseAddressInBreakpointsView: false  (default: false)
      dUseToolTipsInBreakpointsView: true  (default: true)
      dRegisterForPostMortem: false  (default: false)
      dUseAddressInStackView: false  (default: false)
      dExtraDumperFile:   (default: )
      dAlwaysAdjustColumnWidths: true  (default: true)
      dAdditionalArguments:   (default: )
      dGdbCustomDumperCommands:   (default: )
      dSourcePaths:   (default: )
      dSymbolPaths:   (default: )
      dBreakOnCrtDbgReport: false  (default: false)
      dBreakEvent:   (default: )
      dUseAlternatingRowColours: false  (default: false)
      dUseMessageBoxForSignals: true  (default: true)
      dFontSizeFollowsEditor: false  (default: false)
      dAutoQuit: false  (default: false)
      dLogTimeStamps: false  (default: false)
      dCloseMemoryBuffersOnExit: true  (default: true)
      dCloseBuffersOnExit: false  (default: false)
      dBreakpointsFullPath: false  (default: false)
      dSwitchModeOnExit: false  (default: false)
      dStationaryEditorWhileStepping: false  (default: false)
      dRaiseOnInterrupt: true  (default: true)
      dUseCodeModel: true  (default: true)
      dUseDebuggingHelper: true  (default: true)
      dSelectedPluginBreakpointsPattern: .*  (default: .*)
      dNoPluginBreakpoints: false  (default: false)
      dBreakOnCatch: false  (default: false)
      dBreakOnThrow: false  (default: false)
      dBreakOnFatal: false  (default: false)
      dBreakOnWarning: false  (default: false)
      dShowQmlObjectTree: true  (default: true)
      dBreakOnAbort: false  (default: false)
      dQmlInspector.ShowAppOnTop: false  (default: false)
      dMaximalStackDepth: 20  (default: 20)
      dShowStandardNamespace: true  (default: true)
      dShowQObjectNames: false  (default: false)
      dShowQtNamespace: true  (default: true)
      dAutoDerefPointers: true  (default: true)
      dSortStructMembers: true  (default: true)
      dDisplayStringLimit: 100  (default: 100)
      dMaximalStringLength: 10000  (default: 10000)
      dEnableReverseDebugging: false  (default: false)
      dSkipKnownFrames: false  (default: false)
      dAllPluginBreakpoints: true  (default: true)
      dAdjustBreakpointLocations: true  (default: true)
      dSelectedPluginBreakpoints: false  (default: false)
      dBreakpointCorrection: true  (default: true)
      dCDB_Console: false  (default: false)
      dLoadGdbInit: true  (default: true)
      dIgnoreFirstChanceAccessViolation: false  (default: false)
      dAttemptQuickStart: false  (default: false)
      dLoadGdbDumpers2: false  (default: false)
      dGdbPostAttachCommands:   (default: )
      dGdbStartupCommands:   (default: )
      dAutoEnrichParameters: true  (default: true)
      dWatchdogTimeout: 20  (default: 20)
      dTargetAsync: false  (default: false)
      dUseDynamicType: true  (default: true)
      dMultiInferior: false  (default: false)
      dWarnOnReleaseBuilds: true  (default: true)
      dIdentifyDebugInfoPackages: false  (default: false)
      dIntelFlavor: false  (default: false)
      dUseToolTips: true  (default: true)
      dState changed from DebuggerNotReady(0) to EngineSetupRequested(1) [master]
      dQUEUE: SETUP ENGINE
      dCALL: SETUP ENGINE
       Launching C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\cdb.exe -aqtcreatorcdbext.dll -lines -G -c .idle_cmd !qtcreatorcdbext.idle -y "" D:\build-simple-5_7_msvc2013_32bit-Debug\debug\simple_test_app.exe
       using D:\qtcreator-4.2.0-rc1\lib\qtcreatorcdbext32\qtcreatorcdbext.dll of 14.11.2016 04:19.
       C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\cdb.exe running as 46032
       Microsoft (R) Windows Debugger Version 6.3.9600.17298 X86
       Using CDB based breakpoint correction.
       Copyright (c) Microsoft Corporation. All rights reserved.
       CommandLine: D:\build-simple-5_7_msvc2013_32bit-Debug\debug\simple_test_app.exe
       Error: Attempts to access '""' failed: 0x7b - The filename, directory name, or volume label syntax is incorrect.
       ************* Symbol Path validation summary **************
       Response                         Time (ms)     Location
       Error                                          ""
       Symbol search path is: ""
       Executable search path is: 
      sModule loaded: simple_test_app.exe
      sModule loaded: ntdll.dll
      sModule loaded: C:\WINDOWS\SysWOW64\KERNEL32.DLL
      sModule loaded: C:\WINDOWS\SysWOW64\KERNELBASE.dll
      sModule loaded: C:\WINDOWS\SysWOW64\SHELL32.dll
      sModule loaded: C:\WINDOWS\SysWOW64\msvcrt.dll
      sModule loaded: C:\WINDOWS\SysWOW64\cfgmgr32.dll
      sModule loaded: D:\Qt\5.7\msvc2013\bin\Qt5Networkd.dll
      sModule loaded: D:\Qt\5.7\msvc2013\bin\Qt5Widgetsd.dll
      sModule loaded: C:\WINDOWS\SysWOW64\windows.storage.dll
      sModule loaded: D:\Qt\5.7\msvc2013\bin\Qt5Guid.dll
      sModule loaded: C:\WINDOWS\SysWOW64\combase.dll
      sModule loaded: C:\WINDOWS\SysWOW64\RPCRT4.dll
      sModule loaded: C:\WINDOWS\SysWOW64\SspiCli.dll
      sModule loaded: C:\WINDOWS\SysWOW64\WS2_32.dll
      sModule loaded: C:\WINDOWS\SysWOW64\GDI32.dll
      sModule loaded: C:\WINDOWS\SysWOW64\USER32.dll
      sModule loaded: C:\WINDOWS\SysWOW64\CRYPTBASE.dll
      sModule loaded: C:\WINDOWS\SysWOW64\ole32.dll
      sModule loaded: C:\WINDOWS\SysWOW64\sechost.dll
      sModule loaded: C:\WINDOWS\SysWOW64\bcryptPrimitives.dll
      sModule loaded: C:\WINDOWS\SysWOW64\ADVAPI32.dll
      sModule loaded: C:\WINDOWS\SysWOW64\shlwapi.dll
      sModule loaded: D:\Qt\5.7\msvc2013\bin\Qt5Xmld.dll
      sModule loaded: C:\WINDOWS\SysWOW64\CRYPT32.dll
      sModule loaded: C:\WINDOWS\SysWOW64\kernel.appcore.dll
      sModule loaded: C:\WINDOWS\SysWOW64\MSASN1.dll
      sModule loaded: C:\WINDOWS\SysWOW64\shcore.dll
      sModule loaded: D:\Qt\5.7\msvc2013\bin\Qt5Cored.dll
      sModule loaded: C:\WINDOWS\SysWOW64\powrprof.dll
      sModule loaded: C:\WINDOWS\SysWOW64\MSVCP120D.dll
      sModule loaded: C:\WINDOWS\SysWOW64\profapi.dll
      sModule loaded: C:\WINDOWS\SysWOW64\MSVCR120D.dll
      sModule loaded: C:\WINDOWS\SysWOW64\IPHLPAPI.DLL
      sModule loaded: C:\WINDOWS\SysWOW64\DNSAPI.dll
      sModule loaded: C:\WINDOWS\SysWOW64\NSI.dll
      sModule loaded: C:\WINDOWS\SysWOW64\MPR.dll
       (9778.a76c): Break instruction exception - code 80000003 (first chance)
       *** ERROR: Symbol file could not be found.  Defaulted to export symbols for ntdll.dll - 
       eax=00000000 ebx=00000003 ecx=f3620000 edx=00000000 esi=00f60100 edi=00dfe000
       eip=7734ccbc esp=00eff984 ebp=00eff9b0 iopl=0         nv up ei pl zr na pe nc
       cs=0023  ss=002b  ds=002b  es=002b  fs=0053  gs=002b             efl=00000246
       ntdll!LdrInitShimEngineDynamic+0x6dc:
       7734ccbc cc              int     3
       cdb: Reading initial command '.idle_cmd !qtcreatorcdbext.idle'
       Execute when idle: !qtcreatorcdbext.idle
       0:000>
       *** ERROR: Symbol file could not be found.  Defaulted to export symbols for C:\WINDOWS\SysWOW64\KERNEL32.DLL - 
      <l+t
      <l+s
      dNOTE: ENGINE SETUP OK
      dState changed from EngineSetupRequested(1) to EngineSetupOk(3) [master]
      dQUEUE: SETUP INFERIOR
      dState changed from EngineSetupOk(3) to InferiorSetupRequested(4) [master]
      dQUEUE: SETUP INFERIOR
      dCALL: SETUP INFERIOR
      <bu102500 `simple_test_app!D:\qtcreator-super-4.1\qtcreator\tests\manual\debugger\simple\simple_test_app.cpp:2371`
      <!qtcreatorcdbext.breakpoints -v
      <sxn 0x4000001f
      <sxn ibp
      <.asm source_line
      <!qtcreatorcdbext.setparameter maxStringLength=10000 maxStackDepth=20
      <!qtcreatorcdbext.script  print(sys.version)
      <!qtcreatorcdbext.pid
       Source options are 1:
            1/t - Step/trace by source line
       Source options are 5:
            1/t - Step/trace by source line
            4/s - List source code at prompt
       *** WARNING: Unable to verify checksum for simple_test_app.exe
      d*** WARNING: Unable to verify checksum for simple_test_app.exe
       Obtained breakpoint 0xd5d4e8 (#25), at 0xf72cc9, module: 'simple_test_app'
       All breakpoints have been resolved.
       Assembly options: source_line
       Python is not supported in this CDB extension.
       You need to define PYTHON_INSTALL_DIR in your creator build environment pointing to a Python 3.5 installation.
       Qt Creator CDB extension version 4.2 32 bit.
      dTaking notice of pid 38776
      dNOTE: INFERIOR SETUP OK
      dState changed from InferiorSetupRequested(4) to InferiorSetupOk(6) [master]
      dState changed from InferiorSetupOk(6) to EngineRunRequested(7) [master]
      dQUEUE: RUN ENGINE
      dCALL: RUN ENGINE
      <g
      dNOTE: ENGINE RUN AND INFERIOR RUN OK
      sRunning.
      dState changed from EngineRunRequested(7) to InferiorRunOk(11) [master]
      sModule loaded: C:\WINDOWS\SysWOW64\IMM32.DLL
      
      sModule loaded: D:\Qt\5.7\msvc2013\plugins\platforms\qwindowsd.dll
      sModule loaded: C:\WINDOWS\SysWOW64\OLEAUT32.dll
      sModule loaded: C:\WINDOWS\SysWOW64\WINMM.dll
      sModule loaded: C:\WINDOWS\SysWOW64\winmmbase.dll
      sModule loaded: C:\WINDOWS\SysWOW64\WINMMBASE.dll
      sModule loaded: C:\WINDOWS\SysWOW64\uxtheme.dll
      sModule loaded: C:\WINDOWS\SysWOW64\dwmapi.dll
       '00\u1e9e' true
       Creator: Switch off magic autorun.
      
       qDebug() 1
       qDebug() 2
       qDebug() 3
       qDebug <foo & bar>
       std::cout @@ 1
       std::cout @@ 2
       std::cout @@ 3
       std::cout <foo & bar>
       (9778.a76c): C++ EH exception - code e06d7363 (first chance)
       *** ERROR: Symbol file could not be found.  Defaulted to export symbols for C:\WINDOWS\SysWOW64\KERNELBASE.dll - 
       *** ERROR: Symbol file could not be found.  Defaulted to export symbols for C:\WINDOWS\SysWOW64\MSVCR120D.dll - 
      s
      sException at 0x756edae8, code: 0xe06d7363: C++ exception, flags=0x1 (execution cannot be continued) (first chance) at d:\qtcreator-super-4.1\qtcreator\tests\manual\debugger\simple\simple_test_app.cpp:699
       
       Exception at 0x756edae8, code: 0xe06d7363: C++ exception, flags=0x1 (execution cannot be continued) (first chance) at d:\qtcreator-super-4.1\qtcreator\tests\manual\debugger\simple\simple_test_app.cpp:699
      sModule loaded: D:\build-simple-5_7_msvc2013_32bit-Debug\debug\simple_test_plugin.dll
      
       SENDER:  qobject::Sender(0xeffd84, name = "Sender")
       "HiDu"
      
       3 4
       Test
       7
       Breakpoint 102500 hit
       eax=00effd94 ebx=00dfe000 ecx=00effd94 edx=00000000 esi=0000000c edi=0100ed20
       eip=00f72cc9 esp=00effd90 ebp=00effd98 iopl=0         nv up ei pl nz na pe nc
       cs=0023  ss=002b  ds=002b  es=002b  fs=0053  gs=002b             efl=00000206
       > 2371:         return;
       simple_test_app!final::testEndlessLoop+0x19:
        2371 00f72cc9 eb2e            jmp     simple_test_app!final::testEndlessLoop+0x49 (00f72cf9)
      sStopped at breakpoint 25 (25) in thread 0.
      dNOTE: INFERIOR SPONTANEOUS STOP
      sStopped.
      dState changed from InferiorRunOk(11) to InferiorStopOk(14) [master]
      <!qtcreatorcdbext.locals -D -e watch,local,inspect,return -v -c -a -W 0
       Live user mode: <Local>
       Microsoft (R) Windows Debugger Version 6.3.9600.17298 X86
       Using CDB based breakpoint correction.
       Copyright (c) Microsoft Corporation. All rights reserved.
       command line: '"C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\cdb.exe"  -aqtcreatorcdbext.dll -lines -G -c ".idle_cmd !qtcreatorcdbext.idle" -y \"\" D:\build-simple-5_7_msvc2013_32bit-Debug\debug\simple_test_app.exe'  Debugger Process 0xB3D0 
       dbgeng:  image 6.3.9600.17298, built Sat Oct 25 02:24:41 2014
               [path: C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\dbgeng.dll]
       dbghelp: image 6.3.9600.17336, built Fri Feb 27 02:33:13 2015
               [path: C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\dbghelp.dll]
               DIA version: 65501
       Extension DLL search Path:
           D:\qtcreator-4.2.0-rc1\lib\qtcreatorcdbext32;C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\WINXP;C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\winext;C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\winext\arcade;C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\pri;C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86;C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\winext\arcade;D:\Qt\5.7\msvc2013\lib;D:\Qt\5.7\msvc2013\bin;C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\IDE\CommonExtensions\Microsoft\TestWindow;C:\Program Files (x86)\MSBuild\12.0\bin\amd64;C:\Program Files (x86)\MSBuild\12.0\bin\amd64;C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\BIN\amd64_x86;C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\BIN\amd64;C:\WINDOWS\Microsoft.NET\Framework64\v4.0.30319;C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\VCPackages;C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\IDE;C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\Tools;C:\Program Files (x86)\HTML Help Workshop;C:\Program Files (x86)\HTML Help Workshop;C:\Program Files (x86)\Microsoft Visual Studio 12.0\Team Tools\Performance Tools\x64;C:\Program Files (x86)\Microsoft Visual Studio 12.0\Team Tools\Performance Tools;C:\Program Files (x86)\Windows Kits\8.1\bin\x64;C:\Program Files (x86)\Windows Kits\8.1\bin\x86;C:\Program Files (x86)\Microsoft SDKs\Windows\v8.1A\bin\NETFX 4.5.1 Tools\x64\;C:\ProgramData\Oracle\Java\javapath;C:\Perl\site\bin;C:\Perl\bin;C:\Program Files\Common Files\Microsoft Shared\Windows Live;C:\Program Files (x86)\Common Files\Microsoft Shared\Windows Live;c:\Program Files (x86)\AMD APP\bin\x86_64;c:\Program Files (x86)\AMD APP\bin\x86;C:\Program Files (x86)\Intel\iCLS Client\;C:\Program Files\Intel\iCLS Client\;C:\WINDOWS\system32;C:\WINDOWS;C:\WINDOWS\System32\Wbem;C:\WINDOWS\System32\WindowsPowerShell\v1.0\;C:\Program Files\Intel\Intel(R) Management Engine Components\DAL;C:\Program Files\Intel\Intel(R) Management Engine Components\IPT;C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\DAL;C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\IPT;c:\Program Files (x86)\ATI Technologies\ATI.ACE\Core-Static;C:\Program Files\Dell\Dell Data Protection\Access\Advanced\Wave\Gemalto\Access Client\v5\;C:\Program Files (x86)\Security Innovation\SI TSS\bin\;C:\Program Files (x86)\Windows Live\Shared;C:\Program Files (x86)\ATI Technologies\ATI.ACE\Core-Static;C:\Program Files (x86)\Windows Kits\8.1\Windows Performance Toolkit\;C:\Program Files\Git\cmd;C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;C:\Program Files (x86)\Microsoft SDKs\TypeScript\1.0\
       Extension DLL chain:
           qtcreatorcdbext: API 0.0.0, built Mon Nov 14 04:19:15 2016
               [path: D:\qtcreator-4.2.0-rc1\lib\qtcreatorcdbext32\qtcreatorcdbext.dll]
           qtcreatorcdbext.dll: API 1.0.0, built Mon Nov 14 04:19:15 2016
               [path: D:\qtcreator-4.2.0-rc1\lib\qtcreatorcdbext32\qtcreatorcdbext.dll]
           dbghelp: image 6.3.9600.17336, API 6.3.6, built Fri Feb 27 02:33:13 2015
               [path: C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\dbghelp.dll]
           ext: image 6.3.9600.17336, API 1.0.0, built Fri Feb 27 02:39:37 2015
               [path: C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\winext\ext.dll]
           wow64exts: image 6.3.9600.17298, API 1.0.0, built Sat Oct 25 02:33:50 2014
               [path: C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\WINXP\wow64exts.dll]
           exts: image 6.3.9600.17336, API 1.0.0, built Fri Feb 27 02:36:28 2015
               [path: C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\WINXP\exts.dll]
           uext: image 6.3.9600.17298, API 1.0.0, built Sat Oct 25 02:34:05 2014
               [path: C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\winext\uext.dll]
           ntsdexts: image 6.3.9600.17298, API 1.0.0, built Sat Oct 25 02:34:16 2014
               [path: C:\Program Files (x86)\Windows Kits\8.1\Debuggers\x86\WINXP\ntsdexts.dll]
       WOW64 extensions loaded
       DEBUG: , complex dumpers
       DEBUG: expandEntrySet local 
      ddata=[{iname="local.a",name="a",type="int64",exp="*(int64 *)0xeffd90",address="0xeffd90",size="8",valueencoded="utf16:2:0",value="3100",valueenabled="true",valueeditable="true",numchild="0"}]
       <Rebuild Watchmodel 346 @ 13:32:25.064 [151400ms] >
      sFinished retrieving data
      
      <!qtcreatorcdbext.assign -u local.a=2d0031003000
      <!qtcreatorcdbext.locals -D -e watch,local,inspect,return -v -c -a -W 0
       Ok
       DEBUG: , complex dumpers
       DEBUG: expandEntrySet local 
      ddata=[{iname="local.a",name="a",type="int64",exp="*(int64 *)0xeffd90",address="0xeffd90",size="8",valueencoded="utf16:2:0",value="3200",valueenabled="true",valueeditable="true",numchild="0"}]
       <Rebuild Watchmodel 347 @ 13:32:30.781 [5717ms] >
      sFinished retrieving data
      

        For Gerrit Dashboard: QTCREATORBUG-17269
        # Subject Branch Project Status CR V

            davschul David Schulz
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes